--- a/index.html
+++ b/index.html
@@ -214,7 +214,7 @@
       <!-- banner section end -->
 
       <!-- vocabularies section start  -->
-      <section class="vocabularies w-11/12 mx-auto mt-[200px] mb-5">
+      <section class="vocabularies w-11/12 mx-auto mt-[150px] mb-5">
         <div class="vocabularies-content">
           <h2 class="text-4xl font-bold text-center">
             <span class="text-[#00BCFF]">Let's</span> Learn Vocabularies
@@ -239,18 +239,45 @@
         </div>
       </section>
 
+      <!-- spinner -->
+      <section
+        id="spinner"
+        class="spinner flex justify-center items-center hidden"
+      >
+        <span class="loading loading-dots loading-xl"></span>
+      </section>
+      <!-- spinner -->
+
       <section
         id="voca-word"
         class="vocabularies-word bg-[#f8f8f8] w-11/12 mx-auto rounded-[24px]"
       >
         <div
           id="word-container"
-          class="p-7 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-7"
+          class="p-7 grid grid-cols-1 md:grid-cols-2 xl:grid-cols-3 gap-7 mb-5"
         >
           <!-- single word card  -->
         </div>
       </section>
       <!-- vocabularies section end  -->
+
+      <!-- modal  -->
+      <!-- Open the modal using ID.showModal() method -->
+      <dialog id="my_modal" class="modal modal-bottom sm:modal-middle">
+        <div class="modal-box">
+          <div
+            id="details-container"
+            class="border-1 border-[#EDF7FF] rounded-xl p-5 space-y-5"
+          ></div>
+          <div class="modal-action">
+            <form method="dialog">
+              <!-- if there is a button in form, it will close the modal -->
+              <button class="btn">Close</button>
+            </form>
+          </div>
+        </div>
+      </dialog>
+      <!-- modal  -->
     </main>
     <!-- main section end -->
 
